...
      actions: [
        McAction(
          label: McUiLocalization.labelsOf(context).cancel,
          onPressed: canCancel ? () => Navigator.pop(context) : null,
        ),
        McAction(
          key: const ValueKey('submit'),
          label: action,
          emphasis: McActionEmphasis.primary,
          onPressed: onSubmit,
        ),
      ],
      children: children,
...
